# code_racer

./: Cargo.toml  README.md
config/: layout.txt  punct_dict.txt  time_map.txt
src/: code_analyzer.rs  config_loader.rs  console_reader.rs  dict_loader.rs  main.rs  report_saver.rs  route_buffer.rs  route_connector.rs  text_encoder.rs
