[package]
name = "code_racer"
version = "0.1.0"
authors = ["GarthTB <g-art-h@outlook.com>"]
edition = "2024"
description = "计算输入整篇文章所需最小当量的工具"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/GarthTB/code_racer"
categories = ["command-line-utilities"]
keywords = ["keyboard-layout", "typing-speed", "input-method", "chinese-input"]

[dependencies]
